[package]
name = "number_guessing_game"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
yt-dlp = "1.3.4"
ytmapi-rs = "0.2.0"
clap = { version = "4.5.50", features = ["derive"] }
vlc-rs = "0.3.0"


[[bin]]
name = "todo"
path = "src/bin/todo.rs"

[[bin]]
name = "weather"
path = "src/bin/weather.rs"
